--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,8 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:500);
 .App {
+  background-image: linear-gradient(135deg, #c8e0f6, #a8cef0);
   text-align: center;
+  padding: 2% 5%;
 }
 
 .App-logo {
@@ -13,26 +16,99 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.App * {
+  box-sizing: border-box;
+}
+
+ul {
+  padding: 0;
+  list-style: none;
+}
+
+p {
+  margin: 5px 0;
+}
+
+input[type="text"],
+input[type="number"] {
+  background-color: #f4fafe;
+  color: #487dac;
+  padding: 8px 6px 8px 10px;
+  border-radius: 4px;
+  outline: none;
+  border: 1px solid #f4fafe;
+  font-size: 14px;
+  line-height: 20px;
+  align-self: center;
+  height: 38px;
+  margin-bottom: 20px;
+}
+
+.city {
+  width: 250px;
+}
+
+#city-search {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin: auto;
+  position: relative;
 }
 
-.App-link {
-  color: #61dafb;
+.suggestions {
+  width: 250px;
+  position: absolute;
+  top: 45px;
+  z-index: 2;
+  align-self: center;
+  margin: 0;
+  font-size: 14px;
+  box-shadow: 10px 10px 16px -12px rgba(0, 0, 0, 0.75);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.suggestions > li {
+  text-align: left;
+  padding: 8px 6px 8px 10px;
+  background-color: #c8e0f6;
+  color: #487dac;
+  cursor: default;
+}
+
+.suggestions > li:last-child {
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
+
+.suggestions > li:hover {
+  background-color: #f4fafe;
+  font-size: 120%;
+  cursor: pointer;
+}
+
+.event {
+  background-color: #f4fafe;
+  color: #487dac;
+  padding: 10px 10px 35px;
+  margin-bottom: 10px;
+  text-align: left;
+  border: 1px solid #f4fafe;
+  border-radius: 4px;
+  position: relative;
+}
+
+.details-btn {
+  background-color: #487dac;
+  color: #f4fafe;
+  position: absolute;
+  right: 5px;
+  bottom: 5px;
+  padding: 5px 8px;
+  border-radius: 4px;
+  outline: none;
+  cursor: pointer;
+}
+
+.details-btn:hover {
+  background-color: #99c1e5;
+  font-size: 120%;
 }
