--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,9 @@ p {
 }
 
 h1 {
-  color: #f4fafe;
+  color: #487dac;
   font-weight: bold;
-  text-shadow: -1.5px -1.5px 0 #487dac;
+  text-shadow: -1.5px -1.5px 0 #99c1e5;
 }
 
 input[type="text"],
