--- a/src/App.css
+++ b/src/App.css
@@ -141,6 +141,14 @@ input[type="number"]::placeholder {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 16px;
+  background-color: #f4fafe;
+  opacity: 0.9;
+  padding: 10px 10px 35px;
+  margin-bottom: 10px;
+  text-align: left;
+  border: 1px solid #f4fafe;
+  border-radius: 4px;
+  position: relative;
 }
 
 @media (max-width: 768px) {
