--- a/src/App.css
+++ b/src/App.css
@@ -183,6 +183,9 @@ input[type="number"]::placeholder {
   background: repeating-conic-gradient(#0000 0 35deg, #514b82 0 90deg);
   -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 3px), #000 0);
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 @keyframes l18 {
   100% {
