--- a/src/App.css
+++ b/src/App.css
@@ -182,8 +182,10 @@ input[type="number"]::placeholder {
     var(--c) 0 50%;
   background-size: 10px 10px;
   animation: l18 1s infinite;
-  display: flex;
-  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 .spinner::before {
   content: "";
@@ -193,8 +195,6 @@ input[type="number"]::placeholder {
   background: repeating-conic-gradient(#0000 0 35deg, #514b82 0 90deg);
   -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 3px), #000 0);
   border-radius: 50%;
-  display: flex;
-  justify-content: center;
 }
 
 @keyframes l18 {
