--- a/src/App.css
+++ b/src/App.css
@@ -153,13 +153,28 @@ input[type="number"]::placeholder {
 }
 
 /* chart container  */
-.charts-container {
+/* .charts-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-gap: 16px;
   background-color: #f4fafe;
   opacity: 0.9;
   padding: 10px 10px 35px;
+  margin-bottom: 10px;
+  text-align: left;
+  border: 1px solid #f4fafe;
+  border-radius: 4px;
+  position: relative;
+} */
+
+.charts-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 200px; /* Adjust as necessary */
+  background-color: #f4fafe; /* Ensure this container has a background for the spinner to contrast */
+  opacity: 0.9;
+  padding: 10px;
   margin-bottom: 10px;
   text-align: left;
   border: 1px solid #f4fafe;
